# ai-news

./: LIVE_NEWS_SETUP.md  NEW_AGENTS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  VERCEL_DEPLOYMENT.md
backend/: .gitignore  AGENTS_GUIDE.md  README.md  main.py  pyproject.toml
backend/agents/: README.md  __init__.py  agent_runner.py  base.py  breaking_news_alert_agent.py  daily_news_collector_agent.py  forbes_agent.py  live_news_agent.py  multi_agent_newsroom_system.py  news_research_agent.py  news_summarizer_agent.py  seo_agent.py  ultimate_ai_news_agent.py  web_search_agent.py  youtube_agent.py
backend/utils/: __init__.py  helpers.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agents/: page.tsx
frontend/src/app/agents/[agentId]/: page.tsx
frontend/src/components/: AgentCard.tsx  AgentsGrid.tsx  CTASection.tsx  ChatBot.tsx  CursorFollower.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  LiveNewsSection.tsx  MouseParallax.tsx  Navbar.tsx  ParallaxElement.tsx  PricingSection.tsx  StatsSection.tsx  TestimonialsSection.tsx
frontend/src/lib/: api.ts
